--- a/MsmLog4net.config
+++ b/MsmLog4net.config
@@ -1,24 +1,23 @@
 ﻿ <log4net>
     <root>
-      <level value="ALL" />
+      <level value="WARN" />
       <appender-ref ref="console" />
       <appender-ref ref="file" />
     </root>
     <appender name="console" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date %level %logger - %message%newline" />
+        <conversionPattern value=" %level %logger - %message%newline" />
       </layout>
     </appender>
     <appender name="file" type="log4net.Appender.RollingFileAppender">
       <file value="msm.log" />
       <appendToFile value="true" />
       <rollingStyle value="Size" />
-      <maxSizeRollBackups value="5" />
-      <maximumFileSize value="10MB" />
+      <maxSizeRollBackups value="1" />
+      <maximumFileSize value="5MB" />
       <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <!--conversionPattern value="%date [%thread] %level %logger - %message%newline" /-->
-    	<conversionPattern value="%level %logger - %message%newline" />
+        <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
       </layout>
     </appender>
   </log4net>
