--- a/MintySensorMonitor.csproj
+++ b/MintySensorMonitor.csproj
@@ -67,6 +67,7 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Web.Extensions">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -77,6 +78,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MsmServiceExampleGetPath.cs" />
+    <Compile Include="MsmServiceExample.cs" />
+    <Compile Include="MsmServiceInterface.cs" />
+    <Compile Include="MsmServiceController.cs" />
     <Compile Include="MsmSensorLabel.cs" />
     <Compile Include="MsmMonitorRequestParameters.cs" />
     <Compile Include="MsmExceptionHint.cs" />
@@ -84,7 +89,7 @@
     <Compile Include="MsmMonitorRequest.cs" />
     <Compile Include="MsmSensorType.cs" />
     <Compile Include="MsmSensor.cs" />
-    <Compile Include="MsmHWiNFO.cs" />
+    <Compile Include="MsmServiceHWiNFO.cs" />
     <Compile Include="MsmMonitorResponse.cs" />
     <Compile Include="MsmException.cs" />
     <Compile Include="MsmNotificationIcon.cs" />
