extracted logging out to seperate class MsmLogging

--- a/MintySensorMonitor.csproj
+++ b/MintySensorMonitor.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MsmLogging.cs" />
     <Compile Include="MsmServiceExample.cs" />
     <Compile Include="MsmServiceInterface.cs" />
     <Compile Include="MsmServiceController.cs" />
